--- a/slides/index.html
+++ b/slides/index.html
@@ -31,12 +31,12 @@
                                 <li>
                                     Membro do <a href="https://phpsp.org.br" target="_blank" rel="noopener">PHPSP</a>
                                 </li>
-                                <li>
-                                    Engenheiro na
-                                    <a href="https://ottera.tv" target="_blank" rel="noopener">OTTera</a>
-                                </li>
                                 <li>Entusiasta em cibersegurança</li>
-                                <li>Desenvolvedor há mais de 10 anos</li>
+                                <li>Desenvolvedor Web há 1 anos</li>
+                                <li>
+                                    Instrutor na
+                                    <a href="https://letscode.com.br" target="_blank" rel="noopener">Let's Code</a>
+                                </li>
                             </ul>
                         </div>
                     </section>
@@ -138,10 +138,10 @@
                     <section data-auto-animate>
                         <h2>Containers</h2>
                         <blockquote class="smaller">
-                            Containers are an abstraction at the app layer that packages code and dependencies together. 
-                            Multiple containers can run on the same machine and share the OS kernel with other containers, 
-                            each running as isolated processes in user space. Containers take up less space than VMs 
-                            (container images are typically tens of MBs in size), can handle more applications and require 
+                            Containers are an abstraction at the app layer that packages code and dependencies together.
+                            Multiple containers can run on the same machine and share the OS kernel with other containers,
+                            each running as isolated processes in user space. Containers take up less space than VMs
+                            (container images are typically tens of MBs in size), can handle more applications and require
                             fewer VMs and Operating systems.
                         </blockquote>
                         <a href="https://www.docker.com/resources/what-container/" class="small">Docker</a>
@@ -185,7 +185,7 @@
                         <blockquote class="smaller">
                             Pod is a group of one or more containers, with shared storage and network
                             resources, and a specification for how to run the containers. A Pod's contents
-                            are always co-located and co-scheduled, and run in a shared context.                     
+                            are always co-located and co-scheduled, and run in a shared context.
                         </blockquote>
                         <a href="https://kubernetes.io/docs/concepts/workloads/pods/" class="small" target="_blank"
                            rel="noopener">kubernetes.io</a>
@@ -193,12 +193,12 @@
                     <section>
                         <h3>Deployment</h3>
                         <blockquote class="smaller">
-                            A Deployment provides declarative updates for Pods and ReplicaSets.                     
+                            A Deployment provides declarative updates for Pods and ReplicaSets.
                             <br>
-                            You describe a desired state in a Deployment, and the Deployment Controller 
-                            changes the actual state to the desired state at a controlled rate. You can 
-                            define Deployments to create new ReplicaSets, or to remove existing Deployments 
-                            and adopt all their resources with new Deployments.                     
+                            You describe a desired state in a Deployment, and the Deployment Controller
+                            changes the actual state to the desired state at a controlled rate. You can
+                            define Deployments to create new ReplicaSets, or to remove existing Deployments
+                            and adopt all their resources with new Deployments.
                         </blockquote>
                         <a href="https://kubernetes.io/docs/concepts/workloads/controllers/deployment/" class="small"
                            target="_blank" rel="noopener">kubernetes.io</a>
@@ -211,16 +211,16 @@
                         </blockquote>
                         <blockquote class="smaller">
                             In Kubernetes, a Service is an abstraction which defines a logical set of Pods
-                            and a policy by which to access them (sometimes this pattern is called a 
-                            micro-service).                     
+                            and a policy by which to access them (sometimes this pattern is called a
+                            micro-service).
                         </blockquote>
                         <a href="https://kubernetes.io/docs/concepts/services-networking/service/" class="small">kubernetes.io</a>
                     </section>
                     <section data-auto-animate>
                         <h3>HorizontalPodAutoscaler (HPA)</h3>
                         <blockquote class="smaller">
-                            In Kubernetes, a HorizontalPodAutoscaler automatically updates a workload 
-                            resource (such as a Deployment or StatefulSet), with the aim of automatically 
+                            In Kubernetes, a HorizontalPodAutoscaler automatically updates a workload
+                            resource (such as a Deployment or StatefulSet), with the aim of automatically
                             scaling the workload to match demand.
                         </blockquote>
                         <a href="https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/" class="small">kubernetes.io</a>
@@ -230,19 +230,19 @@
                         <blockquote class="smaller">
                             Horizontal scaling means that the response to increased load is to deploy more
                             Pods. This is different from vertical scaling, which for Kubernetes would mean
-                            assigning more resources (for example: memory or CPU) to the Pods that are 
-                            already running for the workload.                     
+                            assigning more resources (for example: memory or CPU) to the Pods that are
+                            already running for the workload.
                         </blockquote>
                         <a href="https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/" class="small">kubernetes.io</a>
                     </section>
                     <section data-auto-animate>
                         <h3>HorizontalPodAutoscaler (HPA)</h3>
                         <blockquote class="smaller">
-                            If the load decreases, and the number of Pods is above the configured minimum, 
-                            the HorizontalPodAutoscaler instructs the workload resource (the Deployment, 
+                            If the load decreases, and the number of Pods is above the configured minimum,
+                            the HorizontalPodAutoscaler instructs the workload resource (the Deployment,
                             StatefulSet, or other similar resource) to scale back down.
-                            Horizontal pod autoscaling does not apply to objects that can't be scaled 
-                            (for example: a DaemonSet.)                    
+                            Horizontal pod autoscaling does not apply to objects that can't be scaled
+                            (for example: a DaemonSet.)
                         </blockquote>
                         <a href="https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/" class="small">kubernetes.io</a>
                     </section>
@@ -711,6 +711,11 @@
                         <li>
                             <a href="https://www.istioworkshop.io/" target="_blank" rel="noopener">
                                 istioworkshop.io
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://kubernetes.io/" target="_blank" rel="noopener">
+                                kubernetes.io
                             </a>
                         </li>
                     </ul>
